@@ -846,6 +846,7 @@ Point is a command for drawing a point map symbol.
     |audio|,
     |bat|,
     |bones|,
+    |borehole|,
     |danger|,
     |dig|,
     |electric-light|,
