@@ -791,6 +791,7 @@ bool thpoint::export_mp(class thexpmapmpxs * out)
     thpoint_type_export_mp(TT_POINT_TYPE_HELICTITES,SYMP_HELICTITES)
     thpoint_type_export_mp(TT_POINT_TYPE_HUMANBONES,SYMP_HUMANBONES)
     thpoint_type_export_mp(TT_POINT_TYPE_MASONRY,SYMP_MASONRY)
+    thpoint_type_export_mp(TT_POINT_TYPE_BOREHOLE,SYMP_BOREHOLE)
     thpoint_type_export_mp(TT_POINT_TYPE_MINUS,SYMP_MINUS)
     thpoint_type_export_mp(TT_POINT_TYPE_NAMEPLATE,SYMP_NAMEPLATE)
     thpoint_type_export_mp(TT_POINT_TYPE_NO_WHEELCHAIR,SYMP_NOWHEELCHAIR)
