@@ -144,7 +144,7 @@ enum {
   TT_POINT_TYPE_STEPS,
   TT_POINT_TYPE_BRIDGE,
   TT_POINT_TYPE_TRAVERSE,
-	TT_POINT_TYPE_VIA_FERRATA,
+  TT_POINT_TYPE_VIA_FERRATA,
   TT_POINT_TYPE_CAMP,
   TT_POINT_TYPE_DIG,
   TT_POINT_TYPE_HANDRAIL,
@@ -153,6 +153,7 @@ enum {
   TT_POINT_TYPE_AUDIO,
   TT_POINT_TYPE_BAT,
   TT_POINT_TYPE_BONES,
+  TT_POINT_TYPE_BOREHOLE,
   TT_POINT_TYPE_DANGER,
   TT_POINT_TYPE_ELECTRICLIGHT,
   TT_POINT_TYPE_EXVOTO,
@@ -267,6 +268,7 @@ static const thstok thtt_point_types[] = {
   {"bedrock",TT_POINT_TYPE_BEDROCK},
   {"blocks",TT_POINT_TYPE_BLOCKS},
   {"bones",TT_POINT_TYPE_BONES},
+  {"borehole",TT_POINT_TYPE_BOREHOLE},
   {"breakdown-choke",TT_POINT_TYPE_BREAKDOWN_CHOKE},
   {"bridge",TT_POINT_TYPE_BRIDGE},
   {"camp",TT_POINT_TYPE_CAMP},
