@@ -1,5 +1,7 @@
 Therion 6.3.5 (in progress):
 
+therion:
+ * added point borehole
 
 --------------------------------------------------------------------------------
 
